allow ci to be triggered manually

--- a/.github/workflows/sampleapp-ci.yml
+++ b/.github/workflows/sampleapp-ci.yml
@@ -2,11 +2,10 @@ name: SampleApp CI
 
 on:
   push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   call_unified_ci:
