--- a/.github/workflows/sampleapp-ci.yml
+++ b/.github/workflows/sampleapp-ci.yml
@@ -10,6 +10,8 @@ on:
 permissions:
   actions: write # Grant write permission for actions
   contents: read # Assuming you need to read contents, adjust as necessary
+#   id-token: write # Added to support potential OIDC token requirements in the reusable workflow
+  packages: read # Added to support potential package read operations in the reusable workflow
 
 jobs:
   call_unified_ci:
