--- a/.github/workflows/sampleapp-cd-composite.yml
+++ b/.github/workflows/sampleapp-cd-composite.yml
@@ -42,9 +42,11 @@ jobs:
       source_artifact_name: ${{ github.event.inputs.source_artifact_name }}
       deployment_scope: ${{ github.event.inputs.deployment_scope }}
       
+
       # Application-specific parameters
       # db_migration_project_path: 'src/SampleApp.WebApp/SampleApp.WebApp.csproj'
-
+      # terraform_directory: 'terraform'
+      # azure_app_name: 'sampleapp'
     secrets:
       # Pass all necessary secrets
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
