--- a/.github/workflows/sampleapp-cd-composite.yml
+++ b/.github/workflows/sampleapp-cd-composite.yml
@@ -3,8 +3,8 @@ name: SampleApp CD
 on:
   workflow_dispatch:
     inputs:
-      version_to_deploy:
-        description: 'Version to deploy (e.g., 1.2.3 or 1.2.3-feature-xyz.5)'
+      run_number:
+        description: 'Run number for the CI pipeline'
         required: true
         type: string
       source_artifact_name:
@@ -38,7 +38,7 @@ jobs:
 
     with:
       # Core inputs from workflow_dispatch
-      version_to_deploy: ${{ github.event.inputs.version_to_deploy }}
+      source_run_id: ${{ github.event.inputs.run_number }}
       source_artifact_name: ${{ github.event.inputs.source_artifact_name }}
       deployment_scope: ${{ github.event.inputs.deployment_scope }}
       
