--- a/.github/workflows/sampleapp-cd-composite.yml
+++ b/.github/workflows/sampleapp-cd-composite.yml
@@ -3,8 +3,8 @@ name: SampleApp CD
 on:
   workflow_dispatch:
     inputs:
-      version_to_deploy:
-        description: 'Version to deploy (e.g., 1.2.3 or 1.2.3-feature-xyz.5)'
+      run_number:
+        description: 'Run number for the CI pipeline'
         required: true
         type: string
       source_artifact_name:
@@ -33,18 +33,20 @@ concurrency:
 
 jobs:
   call_sequential_cd:
-    name: Call Sequential CD Workflow for SampleApp
+    name: SampleApp CD
     uses: InwardEcho/workflow-templates/.github/workflows/sequential-cd-workflow-composite.yml@main
 
     with:
       # Core inputs from workflow_dispatch
-      version_to_deploy: ${{ github.event.inputs.version_to_deploy }}
+      source_run_id: ${{ github.event.inputs.run_number }}
       source_artifact_name: ${{ github.event.inputs.source_artifact_name }}
       deployment_scope: ${{ github.event.inputs.deployment_scope }}
       
+
       # Application-specific parameters
       # db_migration_project_path: 'src/SampleApp.WebApp/SampleApp.WebApp.csproj'
-
+      # terraform_directory: 'terraform'
+      # azure_app_name: 'sampleapp'
     secrets:
       # Pass all necessary secrets
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
